--- a/.cargo/.crates.toml
+++ b/.cargo/.crates.toml
@@ -7,6 +7,7 @@
 "hurl 4.2.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["hurl"]
 "hyperfine 1.15.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["hyperfine"]
 "just 1.9.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["just"]
+"neovide 0.12.2 (git+https://github.com/neovide/neovide#db9cf6eddf649d7cf0792995f044ff80670cac84)" = ["neovide"]
 "nu 0.90.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["nu"]
 "ripgrep 14.1.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["rg"]
 "sniffnet 1.2.2 (registry+https://github.com/rust-lang/crates.io-index)" = ["sniffnet"]
