--- a/.gitconfig
+++ b/.gitconfig
@@ -1,18 +1,61 @@
 [user]
-    name = MKasprzyk
-    email = michal.kasprzyk@stxnext.pl
+        name = MKasprzyk
+        email = michal.kasprzyk@stxnext.pl
 [credential]
-    helper = cache
-
+        helper = cache
 
 [pager]
-    diff = delta
-    log = delta
-    reflog = delta
-    show = delta
+        diff = delta
+        log = delta
+        reflog = delta
+        show = delta
+
+; Explanation to some of the commands:
+; https://blog.gitbutler.com/how-git-core-devs-configure-git/ 
+[column]
+        ui = auto
+[tag]
+        sort = version:refname
+[init]
+        defaultBranch = main
+[diff]
+        algorithm = histogram
+        colorMoved = plain
+        mnemonicPrefix = true
+        renames = true
+[push]
+        default = simple
+        autoSetupRemote = true
+        followTags = true
+[fetch]
+        prune = true
+        pruneTags = true
+        all = true
+
+[help]
+        autocorrect = prompt
+[commit]
+        verbose = true
+[rerere]
+        enabled = true
+        autoupdate = true
+[core]
+        excludesfile = ~/.gitignore
+[rebase]
+        autoSquash = true
+        autoStash = true
+        updateRefs = true
+
+[core]
+        fsmonitor = true
+        untrackedCache = true
+[merge]
+        conflictstyle = zdiff3 
+[pull]
+        rebase = true
 
 [interactive]
-    diffFilter = delta --color-only --features=interactive
+        diffFilter = delta --color-only --features=interactive
 
 [delta]
     features = side-by-side line-numbers decorations
