--- a/.cargo/.crates.toml
+++ b/.cargo/.crates.toml
@@ -15,7 +15,7 @@
 "hurl 4.2.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["hurl"]
 "hyperfine 1.15.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["hyperfine"]
 "just 1.9.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["just"]
-"neovide 0.14.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["neovide"]
+"neovide 0.15.2 (git+https://github.com/neovide/neovide#0df980b6d4e5887f49925f2b7419b7b0dc5c0b8d)" = ["neovide"]
 "nu 0.90.1 (registry+https://github.com/rust-lang/crates.io-index)" = ["nu"]
 "ripgrep 14.1.0 (registry+https://github.com/rust-lang/crates.io-index)" = ["rg"]
 "sniffnet 1.2.2 (registry+https://github.com/rust-lang/crates.io-index)" = ["sniffnet"]
