--- a/.config/ulauncher/settings.json
+++ b/.config/ulauncher/settings.json
@@ -3,10 +3,10 @@
     "clear-previous-query": true,
     "disable-desktop-filters": false,
     "grab-mouse-pointer": false,
-    "hotkey-show-app": "<Super>h",
+    "hotkey-show-app": "<Primary><Alt><Super>p",
     "render-on-screen": "mouse-pointer-monitor",
     "show-indicator-icon": true,
     "show-recent-apps": "0",
     "terminal-command": "",
-    "theme-name": "dark"
+    "theme-name": "ubuntu"
 }
