--- a/.config/lazygit/config.yml
+++ b/.config/lazygit/config.yml
@@ -1,6 +1,6 @@
 git:
-  paging:
-    colorArg: always
-    pager: delta --dark --paging=never
+  pagers:
+    - colorArg: always
+      pager: delta --dark --paging=never
 gui:
   showIcons: true
